# podcast_teaser_generator

1song/: README.md  pyproject.toml
1song/podcast_teaser_generator/: cli.py  workflow.py
1song/podcast_teaser_generator/agents/: compositor_agent.py  content_agent.py  video_agent.py
1song/teaser_web/: __init__.py  app.py
1song/teaser_web/routers/: ui.py
1song/teaser_web/static/: style.css
1song/teaser_web/templates/: index.html
